--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="slash_screen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <item name="android:windowBackground"> @drawable/splash_image</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop"> @color/black</item>
+
+    </style>
 </resources>
