card elevation increased

--- a/app/src/main/res/layout/fragment_add_edit_task.xml
+++ b/app/src/main/res/layout/fragment_add_edit_task.xml
@@ -11,67 +11,11 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="3dp"
         app:cardCornerRadius="10dp"
-
-        >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp"
-        >
-
-        <EditText
-            android:id="@+id/edit_task"
-            android:textColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_a_task"
-            android:padding="10dp"
-            android:background="@drawable/edt_background"
-            android:autofillHints="Study"
-            android:inputType="text" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-
-        <CheckBox
-            android:id="@+id/cb_important"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            />
-
-            <TextView
-                android:paddingStart="10dp"
-                android:textColor="@color/black"
-                android:paddingEnd="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/important_task"
-                android:layout_alignTop="@+id/cb_important"
-                android:layout_alignBottom="@+id/cb_important"
-                android:layout_toEndOf="@+id/cb_important"
-                android:gravity="center_vertical"
-                />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/date_created"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="Date Created: "
-            />
-
-    </LinearLayout>
+        app:cardElevation="10dp">
 
     </androidx.cardview.widget.CardView>
 
@@ -86,6 +30,58 @@
         android:src="@drawable/ic_check_mark"
         android:contentDescription="@string/app_name" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp"
+        app:layout_anchor="@+id/cardView"
+        app:layout_anchorGravity="center">
+
+        <EditText
+            android:id="@+id/edit_task"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="Study"
+            android:background="@drawable/edt_background"
+            android:hint="@string/enter_a_task"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColor="@color/black" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <CheckBox
+                android:id="@+id/cb_important"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="0dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/cb_important"
+                android:layout_alignBottom="@+id/cb_important"
+                android:layout_toEndOf="@+id/cb_important"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/important_task"
+                android:textColor="@color/black" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/date_created"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="Date Created: " />
+
+    </LinearLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
